Mantendo compatibilidade versão java 1.8 (#1010)